Prevent line breaks in Supply Costs table first column

--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -103,6 +103,10 @@
     font-size: 0.8em;
 }
 
+.supply_costs_table td:nth-child(1) {
+    white-space: nowrap;
+}
+
 .table th:nth-child(2),
 .table td:nth-child(2) {
     min-width: 120px;
